--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Life postmortem app back-end",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/bin/graphqlServer",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint src/",
     "lint:fix": "./node_modules/.bin/eslint src/ --fix"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.1"
   }
 }
