--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Life postmortem app back-end",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/bin/graphqlServer",
+    "start": "nodemon ./src/bin/graphqlServer",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint src/",
     "lint:fix": "./node_modules/.bin/eslint src/ --fix"
