--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/bin/graphqlServer",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test node_modules/.bin/jest --passWithNoTests --runInBand --coverage",
+    "test:watch": "NODE_ENV=test node_modules/.bin/jest --passWithNoTests --verbose --runInBand --coverage --watch",
     "lint": "./node_modules/.bin/eslint src/",
     "lint:fix": "./node_modules/.bin/eslint src/ --fix"
   },
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/momae93/lifeposmo-backend#readme",
   "dependencies": {
+    "@types/jest": "^24.0.17",
     "apollo-server": "^2.8.1",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1"
